--- a/index.html
+++ b/index.html
@@ -10,33 +10,41 @@
 
   <body lang="nl">
     <!-- navigatie -->
-    <nav>
-      <a href="#">LOTR</a>
-
-      <ul>
-        <li class="active">
-          <a href="#">Home
-          </a>
-        </li>
-        <li >
-          <a href="#inleiding">Inleiding</a>
-        </li>
-        <li >
-          <a href="#">Verhaal
-          </a>
-          <div>
-            <a href="#fellow">Fellowship of the Ring</a>
-            <a href="#twoTowers">Two Towers</a>
-            <a href="#kingReturn">Return of the King</a>
-          </div>
-        </li>
-
-      </ul>
-      <form >
-        <input type="search" placeholder="Zoeken">
-        <button type="submit">Zoek</button>
-      </form>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">LOTR</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"  href="#inleiding">Inleiding</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Verhaal
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#fellow">Fellowship of the Ring</a>
+          <a class="dropdown-item"  href="#twoTowers">Two Towers</a>
+          <a class="dropdown-item"  href="#kingReturn">Return of the King</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Zoek" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Zoek</button>
+    </form>
+  </div>
+</nav>
+</nav>
 
     <!-- jumbotron -->
 <header class="jumbotron">
