--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body lang="nl">
     <!-- navigatie -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" href="#">LOTR</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
           </p>
         </article>
 
-        <button type="button">
+        <button type="button" class="btn-primary">
           Lees meer...
         </button>
 
@@ -77,7 +77,7 @@
           <p>Het verhaal speelt zich af in fantasy-wereld: Middle-earth waar de leefstijl van de mensen doet denken aan onze donkere Middeleeuwen. De rollen worden ingevuld door mensen en mensachtige wezens zoals Hobbits, Elfen, tovenaars, Orks en dwergen.
           </p>
         </article>
-        <button type="button">
+        <button type="button" class="btn-primary">
           Lees meer...
         </button>
 
@@ -91,7 +91,7 @@
           <p>In de Ban van de Ring is geschreven door de taalkundige en universitair professor J.R.R. Tolkien. Het verhaal begon als een vervolg op De Hobbit (1937), maar groeide uit tot een veel groter werk. Het werd in stadia geschreven tussen 1937 en 1949.
           </p>
         </article>
-        <button type="button">
+        <button type="button" class="btn-primary">
           Lees meer...
         </button>
 
@@ -106,7 +106,7 @@
             'In Dreams'.
           </p>
         </article>
-        <button type="button">
+        <button type="button" class="btn-primary">
           Lees meer...
         </button>
       </section>  </div>
@@ -117,17 +117,18 @@
     <!-- einde container -->
 
     <!-- de verhalen -->
-    <div id="verhaal">
-
-      <section id="fellow">
+    <div id="verhaal" class="container-fluid">
+      <div class="row p-4 img-fluid" >
+      <section id="fellow" class="col-md-6 col-lg-4 p-4">
         <h3>The Fellowship of the Ring</h3>
         <img src="img/fellowshipOfTheRings.jpg" alt="The Fellowship of the Ring" class="img-fluid">
         <h4>2001</h4>
-
+        <article>
         <p>Sauron, de machtige heerser van het kwaad heeft zijn ring verloren. Maar de ring, die de macht van het kwaad is, moet worden vernietigd. Via Gollem, komt deze in het bezit van Bilbo, een Hobbit.
           <br>
           De tovenaar Gandalf ontdekt dat de Ring er nog is een gaat het hoofd van de tovenaarsorde raadplegen. Die blijkt de kant van Sauron gekozen te hebben. Sauron gaat op jacht naar de ring. De Nazgûl trekken op naar de Gouw....
         </p>
+      </article>
         <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fellowShip">
   Lees meer...
@@ -199,15 +200,17 @@
         <!-- 1st modaal ^^^^ -->
       </section>
 
-      <section id="twoTowers">
+      <section id="twoTowers"  class="col-md-6 col-lg-4 p-4">
         <h3>The Two Towers</h3>
         <img src="img/lord-of-the-rings-two-towers.jpg" alt="The Two Towers" class="img-fluid">
         <h4>2002</h4>
+        <Article>
         <p>Na het gezelschap te hebben verlaten, reizen Frodo en Sam samen verder naar Mordor. Ze worden achtervolgd door Gollem, die zijn ”lieveling” terug wil. Hij valt de twee aan, maar Frodo slaagt erin Gollem te overmeesteren. Sam wantrouwt Gollem, maar
           Frodo ziet in Gollem een perfecte gids om hen naar Mordor te leiden. Gollem is immers kort geleden uit Mordor ontsnapt. Gollem stemt toe de twee Hobbits naar Mordor te brengen.
         </p>
         <p>Ondertussen worden de Hobbits Merijn en Pepijn door een groep Uruk-hai naar Isengard gebracht, achtervolgd door Aragorn, Legolas en Gimli. De tocht leidt hen door het koninkrijk van Rohan.
         </p>
+      </article>
         <!-- inhoud voor modaal -->
         <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#theTowers">
@@ -272,14 +275,15 @@
 
       <!-- nieuwe kolom / sectie -->
 
-      <section id="kingReturn">
+      <section id="kingReturn"  class="col-md-6 col-lg-4 p-4">
         <h3>The Return of the King</h3>
         <img src="img/returnOfTheKing.jpg" alt="The Return of the King" class="img-fluid">
         <h4>2003</h4>
+        <article>
         <p>Gollem doet nog altijd dienst als gids voor Frodo en Sam, die hij naar Minas Ithil brengt. Aragorn, Legolas, Gimli, Gandalf, Théoden en Éomer arriveren ondertussen bij het door de Enten veroverde Isengard, waar ze Merijn en Pepijn terugvinden.
           Pepijn vindt in het water de Palantír van Saruman. Die avond besluit Pepijn er, tegen Gandalfs advies in, in te kijken. Hij ziet hoe Sauron een aanval beraamt op de stad Minas Tirith. Sauron ziet door de Palantír echter Pepijn en denkt dat hij de Ene
           Ring heeft. Gandalf besluit Pepijn in veiligheid te brengen en neemt hem mee naar Minas Tirith om de bevolking te waarschuwen.
-        </p>
+        </p></article>
         <!-- inhoud voor modaal -->
         <!-- Button trigger modal -->
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ReturnKing">
@@ -344,27 +348,42 @@
       </section>
       <!-- einde kolom -->
     </div>
+  </div>
     <!-- einde verhalen -->
-    <hr>
-    <footer>
-      <small>©
-        <br>Wikipedia Nederland,
-        <a href="https://nl.wikipedia.org/wiki/The_Lord_of_the_Rings">https://nl.wikipedia.org/wiki/The_Lord_of_the_Rings</a>
-        <br>
-        IMDb 2013
-        <a href="https://nl.wikipedia.org/wiki/Internet_Movie_Database">https://nl.wikipedia.org/wiki/Internet_Movie_Database</a>
-        <!-- The Fellowship of the Ring 2001 The Two Towers 2002 The Return of the King 2003 -->
-      </small>
 
-      <div id="validatie">
-        <a href="http://validator.w3.org/check?uri=referer" target="_blank">
-          <img src="https://blanken5.home.xs4all.nl/afb/valid-html5-blue.png" alt="Valide HTML5"></a>
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
-          <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue.gif" alt="Valide CSS">
-        </a>
+    <footer class="container-fluid p-4 bg-primary text-white">
+      <div class="row p-4">
+        <hr>
+  <div class="col-md-6">
+    <small>©
+      <br>Wikipedia Nederland,
+      <a href="https://nl.wikipedia.org/wiki/The_Lord_of_the_Rings" class="text-white">https://nl.wikipedia.org/wiki/The_Lord_of_the_Rings</a>
+      <br>
+      IMDb 2013
+      <a href="https://nl.wikipedia.org/wiki/Internet_Movie_Database" class="text-white">https://nl.wikipedia.org/wiki/Internet_Movie_Database</a>
+      <!-- The Fellowship of the Ring 2001 The Two Towers 2002 The Return of the King 2003 -->
+    </small>
+  </div>
+
+    <div id="validatie" class="col-md-6 text-right">
+      <a href="http://validator.w3.org/check?uri=referer" target="_blank">
+        <img src="https://blanken5.home.xs4all.nl/afb/valid-html5-blue.png" alt="Valide HTML5"></a>
+      <a href="http://jigsaw.w3.org/css-validator/check/referer" target="_blank">
+        <img src="http://jigsaw.w3.org/css-validator/images/vcss-blue.gif" alt="Valide CSS">
+      </a>
+    </div>
       </div>
+
     </footer>
       <script src="node_modules/jquery/dist/jquery.min.js" charset="utf-8"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js" charset="utf-8"></script>
+    <script src="node_modules/jquery-match-height/dist/jquery.matchHeight.js" charset="utf-8"></script>
+    <script type="text/javascript">
+    $(function(){
+      $('#inleiding p').matchHeight();
+      $('#verhaal article').matchHeight();
+    });
+
+    </script>
   </body>
 </html>
