--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lord of the Rings</title>
     <meta name="author" content="Theo den Blanken | Patrick Homburg">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styleLOTR.css">
   </head>
 
   <body lang="nl">
@@ -44,7 +44,7 @@
 
     <!-- jumbotron -->
 <header class="jumbotron">
-  <div class="container-fluid">
+  <div class="container-fluid text-warning">
     <h1 class="display-4">Lord of the Rings</h1>
     <p class="lead">The Fellowship of the Ring, The Two Towers, The Return of the King
     </p>
@@ -119,20 +119,25 @@
     <!-- de verhalen -->
     <div id="verhaal" class="container-fluid">
       <div class="row p-4 img-fluid" >
-      <section id="fellow" class="col-md-6 col-lg-4 p-4">
-        <h3>The Fellowship of the Ring</h3>
-        <img src="img/fellowshipOfTheRings.jpg" alt="The Fellowship of the Ring" class="img-fluid">
-        <h4>2001</h4>
+      <div id="fellow" class="col-md-6 col-lg-4 p-4">
+
+        <section class="card">
+        <h3 class="card-header">The Fellowship of the Ring</h3>
+        <img src="img/fellowshipOfTheRings.jpg" alt="The Fellowship of the Ring" class="img-fluid card-img-top">
+        <div class="card-body"><h4>2001</h4>
         <article>
         <p>Sauron, de machtige heerser van het kwaad heeft zijn ring verloren. Maar de ring, die de macht van het kwaad is, moet worden vernietigd. Via Gollem, komt deze in het bezit van Bilbo, een Hobbit.
           <br>
           De tovenaar Gandalf ontdekt dat de Ring er nog is een gaat het hoofd van de tovenaarsorde raadplegen. Die blijkt de kant van Sauron gekozen te hebben. Sauron gaat op jacht naar de ring. De Nazgûl trekken op naar de Gouw....
         </p>
-      </article>
+      </article></div>
         <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fellowShip">
-  Lees meer...
-</button>
+        <div class="card-footer text-center">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#fellowShip">
+            Lees meer...
+          </button>
+        </div>
+      </section>
 
 <!-- Modal -->
 <div class="modal fade" id="fellowShip" tabindex="-1" role="dialog" aria-labelledby="ShipOfFellow" aria-hidden="true">
@@ -198,24 +203,27 @@
   </div>
 </div>
         <!-- 1st modaal ^^^^ -->
-      </section>
+      </div>
 
-      <section id="twoTowers"  class="col-md-6 col-lg-4 p-4">
-        <h3>The Two Towers</h3>
+      <div id="twoTowers"  class="col-md-6 col-lg-4 p-4">
+        <Section class="card"><h3>The Two Towers</h3>
         <img src="img/lord-of-the-rings-two-towers.jpg" alt="The Two Towers" class="img-fluid">
-        <h4>2002</h4>
+        <div class="card-body"><h4>2002</h4>
         <Article>
         <p>Na het gezelschap te hebben verlaten, reizen Frodo en Sam samen verder naar Mordor. Ze worden achtervolgd door Gollem, die zijn ”lieveling” terug wil. Hij valt de twee aan, maar Frodo slaagt erin Gollem te overmeesteren. Sam wantrouwt Gollem, maar
           Frodo ziet in Gollem een perfecte gids om hen naar Mordor te leiden. Gollem is immers kort geleden uit Mordor ontsnapt. Gollem stemt toe de twee Hobbits naar Mordor te brengen.
         </p>
         <p>Ondertussen worden de Hobbits Merijn en Pepijn door een groep Uruk-hai naar Isengard gebracht, achtervolgd door Aragorn, Legolas en Gimli. De tocht leidt hen door het koninkrijk van Rohan.
         </p>
-      </article>
+      </article></div>
         <!-- inhoud voor modaal -->
         <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#theTowers">
-  Lees meer...
-</button>
+        <div class="card-footer text-center">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#theTowers">
+            Lees meer...
+          </button>
+        </div>
+      </section>
 
 <!-- Modal -->
 <div class="modal fade" id="theTowers" tabindex="-1" role="dialog" aria-labelledby="TweeTorens" aria-hidden="true">
@@ -271,24 +279,27 @@
     </div>
   </div>
 </div>
-      </section>
+</div>
 
       <!-- nieuwe kolom / sectie -->
 
-      <section id="kingReturn"  class="col-md-6 col-lg-4 p-4">
-        <h3>The Return of the King</h3>
+      <div id="kingReturn"  class="col-md-6 col-lg-4 p-4">
+      <section class="card">
+         <h3>The Return of the King</h3>
         <img src="img/returnOfTheKing.jpg" alt="The Return of the King" class="img-fluid">
-        <h4>2003</h4>
+        <div class="card-body"><h4>2003</h4>
         <article>
         <p>Gollem doet nog altijd dienst als gids voor Frodo en Sam, die hij naar Minas Ithil brengt. Aragorn, Legolas, Gimli, Gandalf, Théoden en Éomer arriveren ondertussen bij het door de Enten veroverde Isengard, waar ze Merijn en Pepijn terugvinden.
           Pepijn vindt in het water de Palantír van Saruman. Die avond besluit Pepijn er, tegen Gandalfs advies in, in te kijken. Hij ziet hoe Sauron een aanval beraamt op de stad Minas Tirith. Sauron ziet door de Palantír echter Pepijn en denkt dat hij de Ene
           Ring heeft. Gandalf besluit Pepijn in veiligheid te brengen en neemt hem mee naar Minas Tirith om de bevolking te waarschuwen.
-        </p></article>
+        </p></article></div>
         <!-- inhoud voor modaal -->
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ReturnKing">
-          Lees meer...
-        </button>
+        <div class="card-footer text-center">
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ReturnKing">
+            Lees meer...
+          </button>
+        </div></section>
 
         <!-- Modal -->
         <div class="modal fade" id="ReturnKing" tabindex="-1" role="dialog" aria-labelledby="KingTerug" aria-hidden="true">
@@ -345,7 +356,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
       <!-- einde kolom -->
     </div>
   </div>
@@ -382,6 +393,7 @@
     $(function(){
       $('#inleiding p').matchHeight();
       $('#verhaal article').matchHeight();
+      $('.card').matchHeight();
     });
 
     </script>
